Dark mode and fix a little bugs in css

--- a/src/styles/componets/Nav.css
+++ b/src/styles/componets/Nav.css
@@ -6,12 +6,9 @@
     text-align: center;
     padding-block-start: 10px;
     padding-block-end: 10px;
-    
-    
 }
 
-.Header-nav ul{
-    
+.Header-nav ul{    
        display: flex;
        list-style: none;
        gap: 40px;
@@ -20,12 +17,14 @@
 
 .Header-nav ul a{
     text-decoration: none;
-    
     font: var(--button);
     text-transform: uppercase;
+    transition: all 0.5s ease-out;
 }
 
-
+.Header-nav ul a:hover{
+    color: var(--principal);
+}
 @media only screen and (min-width: 768px){
     .Header-nav{
         display: flex;
